# maxentsolver

./: main.py  pyproject.toml
src/maxentsolver/: __init__.py
src/maxentsolver/models/: __init__.py  generative.py  maxent.py  mcmc.py  meanfield.py  pseudolikelihood.py
src/maxentsolver/utils/: plotting.py  preprocess.py
